# solana-nostd-entrypoint

example-program/: Cargo.toml
solana-nostd-entrypoint/: Cargo.toml
solana-nostd-entrypoint/src/: lib.rs
